# mysteryn-token

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  web-demo.html
.cargo/: config.toml
examples/: custom-keys.rs  quick-start.rs
examples/custom_keys/: mod.rs
examples/keys/: mod.rs
examples/nodejs/: did-pkh.js  index.js  package.json  store-example.js
src/: builder.rs  chain.rs  cwt.rs  js.rs  jwt.rs  lib.rs  prelude.rs  semantics.rs  serde.rs  store.rs  time.rs  token.rs  verifier.rs
src/capability/: capabilities.rs  mod.rs  proof.rs  semantics.rs
tests/fixtures/: action.csv  resource.csv
