[package]
name = "mysteryn-token"
description = "The Delegable Web Token"
version = "0.2.0"
keywords = ["authorization", "dwt", "capability", "security"]
categories = [
  "authentication",
  "cryptography"
]
authors = ["Dmytro Savranskyi <ingvuil@gmail.com>"]
homepage = "https://mysteryn.com"
repository = "https://github.com/Mysteryn-Lab/mysteryn-token"
license = "MIT"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
autoexamples = false

# Starting from Rust 1.87 all wasm features are on, so need to specify 
# wasm-opt features explicitly.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
base64 = "0.22"
bs58 = "0.5"
cid = { version = "0.11", features = ["serde"] }
ipld-core = { version = "0.4", features = ["serde"] }
multihash-codetable = { version = "0.1", features = ["sha2", "blake3"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ipld_dagcbor = "0.6"
serde_ipld_dagjson = "0.2"
serde_bytes = "0.11"
lru = "0.16"
tinytemplate = "1.2"
cbor-diag = "0.1"
cbor4ii = { version = "1.0", features = ["use_alloc"] }
web-time = "1.1"
parking_lot = "0.12"
concat-string = "1.0"
mysteryn-crypto = { version = "0.2", git = "https://github.com/Mysteryn-Lab/mysteryn-crypto.git" }
mysteryn-keys = { version = "0.2", git = "https://github.com/Mysteryn-Lab/mysteryn-keys.git" }

[dev-dependencies]
csv = "1.0"
mysteryn-keys = { version = "0.2", git = "https://github.com/Mysteryn-Lab/mysteryn-keys.git", features = ["bls12381"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
# This is needed so that rand can be included in wasm32-unknown-unknown builds.
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(all(target_family = "wasm"))'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
tokio = { version = "^1", features = ["macros", "test-util"] }

[target.'cfg(all(target_family = "wasm"))'.dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
doctest = false

[[example]]
name = "custom-keys"
test = false

[[example]]
name = "quick-start"
test = false
